# CAL_Smart_Trash

./: CMakeLists.txt  README.md  Untitled Diagram.xml
1st Project/: CMakeLists.txt
1st Project/GUI/: mainwindow.ui
1st Project/src/Graph/: DisjointSet.hpp  Test.cpp  TestGraph.cpp  TestPriQueue.cpp  run.cpp  test_DisjointSet.cpp
2nd Project/: aresta.txt  nos.txt  ruas.txt
2nd Project/src/: Graph.h  calfinal.cpp  camioes.cpp  camioes.h  garbage.cpp  garbage.h
GUI/: cal.pro  mainwindow.cpp
src/Graph/: DisjointSet.hpp  Graph.h  PriQueue.hpp  Test.cpp  TestGraph.cpp  TestPriQueue.cpp  resources.txt  test_DisjointSet.cpp
